# calceph

./: MANIFEST.in  Makefile.am  Makefile.in  Makefile.mingw  Makefile.vc  NEWS  README.md  README.rst  aclocal.m4  configure  configure.ac  readme.txt  setup.py.in
doc/: Makefile.am  Makefile.in  Makefile.mingw  Makefile.sphinx  Makefile.vc  Makefile_listdoc.am  makedoc.sh
doc/html/c/: .buildinfo  arg_PV.html  arg_PVAJ_order.html  arg_PVAJ_orient_order.html  arg_PVAJ_rotangmom_order.html  arg_PV_orient_unit.html  arg_PV_rotangmom_unit.html  arg_PV_unit.html  arg_order.html  arg_order_orient.html  arg_order_rotangmom.html  arg_positionrecordindex.html  arg_unit.html  arg_unit_order.html  arg_unit_orient_unit.html  calceph.copying.html  calceph.error.html  calceph.final.html  calceph.install.html  calceph.interface.cusage.html  calceph.interface.f2003usage.html  calceph.interface.f9xusage.html  calceph.interface.html  calceph.interface.pythonusage.html  calceph.intro.html  calceph.misc.html  calceph.multiple.html  calceph.naifid.html  calceph.reportbugs.html  genindex.html  index.html  objects.inv  replace.html  search.html  searchindex.js
doc/html/c/_sources/: arg_PVAJ_orient_order.txt  arg_PVAJ_rotangmom_order.txt  arg_PV_unit.txt  arg_order_orient.txt  calceph.copying.txt  calceph.multiple.txt  calceph.reportbugs.txt
doc/html/c/condsingle/: calceph.single.html  single_prog.html  single_scompute.html  single_sgetconstant.html  single_sgetconstantcount.html  single_sgetconstantindex.html  single_sgettimescale.html  single_sgettimespan.html
doc/html/c/examples/: error_usage.html  multiple_compute.html  multiple_compute_order.html  multiple_compute_unit.html  multiple_getconstant.html  multiple_getconstantcount.html  multiple_getconstantindex.html  multiple_getorientrecordcount.html  multiple_getorientrecordindex.html  multiple_getpositionrecordcount.html  multiple_getpositionrecordindex.html  multiple_gettimescale.html  multiple_gettimespan.html  multiple_open_array.html  (+5 more)
doc/html/fortran2003/: .buildinfo  arg_PV.html  arg_PVAJ_order.html  arg_PVAJ_orient_order.html  arg_PVAJ_rotangmom_order.html  arg_PV_orient_unit.html  arg_PV_rotangmom_unit.html  arg_PV_unit.html  arg_order.html  arg_order_orient.html  arg_order_rotangmom.html  arg_positionrecordindex.html  arg_unit.html  arg_unit_order.html  arg_unit_orient_unit.html  calceph.copying.html  calceph.error.html  calceph.final.html  calceph.install.html  calceph.interface.cusage.html  calceph.interface.f2003usage.html  calceph.interface.f9xusage.html  calceph.interface.html  calceph.interface.pythonusage.html  calceph.intro.html  calceph.misc.html  calceph.multiple.html  calceph.naifid.html  calceph.reportbugs.html  genindex.html  index.html  objects.inv  replace.html  search.html  searchindex.js
doc/html/fortran77/: .buildinfo  arg_PV.html  arg_PVAJ_order.html  arg_PVAJ_orient_order.html  arg_PVAJ_rotangmom_order.html  arg_PV_orient_unit.html  arg_PV_rotangmom_unit.html  arg_PV_unit.html  arg_order.html  arg_order_orient.html  arg_order_rotangmom.html  arg_positionrecordindex.html  arg_unit.html  arg_unit_order.html  arg_unit_orient_unit.html  calceph.copying.html  calceph.error.html  calceph.final.html  calceph.install.html  calceph.interface.cusage.html  calceph.interface.f2003usage.html  calceph.interface.f9xusage.html  calceph.interface.html  calceph.interface.pythonusage.html  calceph.intro.html  calceph.misc.html  calceph.multiple.html  calceph.naifid.html  calceph.reportbugs.html  genindex.html  index.html  objects.inv  replace.html  search.html  searchindex.js
doc/html/python/: .buildinfo  arg_PV.html  arg_PVAJ_order.html  arg_PVAJ_orient_order.html  arg_PVAJ_rotangmom_order.html  arg_PV_orient_unit.html  arg_PV_rotangmom_unit.html  arg_PV_unit.html  arg_order.html  arg_order_orient.html  arg_order_rotangmom.html  arg_positionrecordindex.html  arg_unit.html  arg_unit_order.html  arg_unit_orient_unit.html  calceph.copying.html  calceph.error.html  calceph.final.html  calceph.install.html  calceph.interface.cusage.html  calceph.interface.f2003usage.html  calceph.interface.f9xusage.html  calceph.interface.html  calceph.interface.pythonusage.html  calceph.intro.html  calceph.misc.html  calceph.multiple.html  calceph.naifid.html  calceph.reportbugs.html  genindex.html  index.html  objects.inv  replace.html  search.html  searchindex.js
doc/source/: arg_PV.rst  arg_PV_orient_unit.rst  arg_positionrecordindex.rst  arg_unit_orient_unit.rst  calceph.error.rst  calceph.naifid.rst  confcommon.py.in  index.rst
doc/source/condsingle/: single_scompute.rst  single_sgetconstant.rst  single_sgetconstantcount.rst  single_sgettimescale.rst
doc/source/examples/: multiple_orient_order.rst
doc/source_c/: conf.py
doc/source_f2003/: conf.py
doc/source_f9x/: conf.py
doc/source_python/: conf.py
examples/: Makefile.am  Makefile.in  Makefile.mingw  Makefile.vc  cerror.c  cmultiple.c  corder.c  corient.c  cscompute.c  csingle.c  example1.mk  f2003error.f  f2003multiple.f  f2003orient.f  f2003scompute.f  f2003single.f  f77error.f  f77multiple.f  f77orient.f  f77single.f  pycompute.py  pyerror.py  pymultiple.py  pyorient.py  readme.txt
pythonapi/src/: Makefile.am  Makefile.in  Makefile.mingw  calcephpy.c  calcephpy.pxd  calcephpy.pyx.in  setup.py.in
src/: Makefile.am  (+36 more)
tests/: Makefile.am  Makefile.in  Makefile.mingw  Makefile.vc  cgetorientrecordindex.c  cgetpositionrecordindex.c  checkcst_11015.c  checktpc_10086.c  checktpc_10086.tpc  cmcheck.c  cmcheckspk.c  cmcheckspktt.c  cmcomputeorder01.c  cmcomputeorder23.c  cmcomputeunit.c  cmcomputeunit_frame.c  cmcomputeunit_hermite.c  cmcomputeunit_naifid.c  cmcomputeunit_seg12.c  cmcomputeunit_seg13.c  cmcomputeunitfail.c  cmcomputeunitfail2.c  cmgetconstant.c  cmgetconstantindex.c  cmgetconstantindextxtpck.c  cmgetconstanttxtpck.c  cmopen.c  cmopenfail.c  cmorientunitfail.c  cmorientunitfail_11025.c  cmorientunitfailspk.c  cmtimescale.c  cmtimespan.c  crotangmomorder0.c  crotangmomorder123.c  crotangmomunit.c  crotangmomunitfail.c  crotangmomunitfail2.c  cscheck.c  csgetconstant.c  (+64 more)
(+144 files in other folders)
